// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Topic responsive tests on web should render HeadContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ hKIDHg"
/>
`;

exports[`Topic responsive tests on web should render HeadContainer correctly 2`] = `
<div
  className="responsive-styles__component-fbPFZZ dzzdQH"
/>
`;

exports[`Topic responsive tests on web should render ResponsiveDivider correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ gUagh"
/>
`;

exports[`Topic responsive tests on web should render ResponsiveName correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ kfmhxW"
  dir="auto"
/>
`;
